@@ -2,6 +2,7 @@
 
 = 1.25.4 - 2020-XX-XX =
 * Tweak - Remove Stripe connect functionality.
+* Tweak - Remove unused method in shipping settings view.
 * Fix	- Breaking behavior on account registration page.
 * Add	- Allows registration of additional accounts.
 * Tweak - Carrier description on dynamic carrier registration form.
